--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "semantic-ui-css": "git+https://github.com/justsong-lab/Semantic-UI-CSS.git",
     "semantic-ui-react": "^2.1.3"
   },
