--- a/.github/workflows/windows-release.yml
+++ b/.github/workflows/windows-release.yml
@@ -12,9 +12,18 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - name: Build Frontend
+        run: |
+          cd web
+          npm install
+          npm run build
+          cd ..
       - name: Set up Go
         uses: actions/setup-go@v3
-      - name: Build
+      - name: Build Backend
         run: |
           go mod download
           go build -ldflags "-s -w -extldflags '-static'" -o gin-react-template.exe
