chore: update semantic-ui-css dependency

--- a/web/package.json
+++ b/web/package.json
@@ -10,7 +10,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
-    "semantic-ui-css": "git+https://github.com/justsong-lab/Semantic-UI-CSS.git",
+    "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.3"
   },
   "scripts": {
