--- a/.github/workflows/linux-release.yml
+++ b/.github/workflows/linux-release.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build Backend
         run: |
           go mod download
-          go build -ldflags "-s -w -extldflags '-static'" -o gin-react-template
+          go build -ldflags "-s -w -extldflags '-static' -X 'gin-react-template/common.Version=${git describe --tags}'" -o gin-react-template
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
