--- a/.github/workflows/macos-release.yml
+++ b/.github/workflows/macos-release.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build Backend
         run: |
           go mod download
-          go build -o gin-react-template-macos
+          go build -ldflags "-X 'gin-react-template/common.Version=${git describe --tags}'" -o gin-react-template-macos
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
