--- a/.github/workflows/windows-release.yml
+++ b/.github/workflows/windows-release.yml
@@ -7,6 +7,9 @@ on:
 jobs:
   release:
     runs-on: windows-latest
+    defaults:
+      run:
+        shell: bash
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -28,7 +31,7 @@ jobs:
       - name: Build Backend
         run: |
           go mod download
-          go build -ldflags "-s -w -extldflags '-static'" -o gin-react-template.exe
+          go build -ldflags "-s -w -extldflags '-static' -X 'gin-react-template/common.Version=${git describe --tags}'" -o gin-react-template.exe
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
