--- a/.github/workflows/linux-release.yml
+++ b/.github/workflows/linux-release.yml
@@ -28,11 +28,11 @@ jobs:
       - name: Build Backend
         run: |
           go mod download
-          go build -ldflags "-s -w -extldflags '-static' -X 'gin-react-template/common.Version=${git describe --tags}'" -o gin-react-template
+          go build -ldflags "-s -w -extldflags '-static' -X 'gin-template/common.Version=${git describe --tags}'" -o gin-template
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: gin-react-template
+          files: gin-template
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
