--- a/.github/workflows/macos-release.yml
+++ b/.github/workflows/macos-release.yml
@@ -28,11 +28,11 @@ jobs:
       - name: Build Backend
         run: |
           go mod download
-          go build -ldflags "-X 'gin-react-template/common.Version=${git describe --tags}'" -o gin-react-template-macos
+          go build -ldflags "-X 'gin-template/common.Version=${git describe --tags}'" -o gin-template-macos
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: gin-react-template-macos
+          files: gin-template-macos
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
