--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "history": "^5.3.0",
+    "marked": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
