--- a/.github/workflows/windows-release.yml
+++ b/.github/workflows/windows-release.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Build Backend
         run: |
           go mod download
-          go build -ldflags "-s -w -extldflags '-static' -X 'gin-template/common.Version=$(git describe --tags)'" -o gin-template.exe
+          go build -ldflags "-s -w -X 'gin-template/common.Version=$(git describe --tags)'" -o gin-template.exe
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
