--- a/web/package.json
+++ b/web/package.json
@@ -42,7 +42,8 @@
     "prettier": "^2.7.1"
   },
   "prettier": {
-    "singleQuote": true
+    "singleQuote": true,
+    "jsxSingleQuote": true
   },
   "proxy": "http://localhost:3000"
 }
