--- a/web/package.json
+++ b/web/package.json
@@ -8,6 +8,7 @@
     "marked": "^4.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
