--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -38,7 +38,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: |
-            justsong/go-file
+            justsong/gin-template
             ghcr.io/${{ github.repository }}
 
       - name: Build and push Docker images
