--- a/.github/workflows/linux-release.yml
+++ b/.github/workflows/linux-release.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Build Backend
         run: |
           go mod download
-          go build -ldflags "-s -w -X 'gin-template/common.Version=$(git describe --tags)'" -o gin-template
+          go build -ldflags "-s -w -X 'gin-template/common.Version=$(git describe --tags)' -extldflags '-static'" -o gin-template
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
