--- a/.github/workflows/linux-release.yml
+++ b/.github/workflows/linux-release.yml
@@ -27,14 +27,23 @@ jobs:
         uses: actions/setup-go@v3
         with:
           go-version: '>=1.18.0'
-      - name: Build Backend
+      - name: Build Backend (amd64)
         run: |
           go mod download
           go build -ldflags "-s -w -X 'gin-template/common.Version=$(git describe --tags)' -extldflags '-static'" -o gin-template
+
+      - name: Build Backend (arm64)
+        run: |
+          sudo apt-get update
+          sudo apt-get install gcc-aarch64-linux-gnu
+          CC=aarch64-linux-gnu-gcc CGO_ENABLED=1 GOOS=linux GOARCH=arm64 go build -ldflags "-s -w -X 'gin-template/common.Version=$(git describe --tags)' -extldflags '-static'" -o gin-template-arm64
+
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
-          files: gin-template
+          files: |
+            gin-template
+            gin-template-arm64
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
