--- a/.github/workflows/macos-release.yml
+++ b/.github/workflows/macos-release.yml
@@ -1,4 +1,6 @@
 name: macOS Release
+permissions:
+  contents: write
 
 on:
   push:
@@ -36,5 +38,7 @@ jobs:
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: gin-template-macos
+          draft: true
+          generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
