ci: release notes directly

--- a/.github/workflows/linux-release.yml
+++ b/.github/workflows/linux-release.yml
@@ -47,7 +47,7 @@ jobs:
           files: |
             gin-template
             gin-template-arm64
-          draft: true
+          draft: false
           generate_release_notes: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
