ci: ignore alpha version

--- a/.github/workflows/linux-release.yml
+++ b/.github/workflows/linux-release.yml
@@ -6,8 +6,7 @@ on:
   push:
     tags:
       - '*'
-    tags-ignore:
-      - '*-alpha*'
+      - '!*-alpha*'
 jobs:
   release:
     runs-on: ubuntu-latest
