--- a/.github/workflows/docker-image-arm64.yml
+++ b/.github/workflows/docker-image-arm64.yml
@@ -4,8 +4,7 @@ on:
   push:
     tags:
       - '*'
-    tags-ignore:
-      - '*-alpha*'
+      - '!*-alpha*'
   workflow_dispatch:
     inputs:
       name:
